edited css styling, styled body class to correct issue with edit question page white space at bottom of page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -87,7 +87,6 @@ a {
    background-position: top center;
    background-repeat: no-repeat;
    margin-top: 50px;
-   height: 720px;
  }
 
 .question-list {
